fixed issue w/ page not centered on mobile< 551px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,6 +59,8 @@ h1, h2, h3, h4, h5, h6 {
   transition: all 0.5s;
   height: 80px;
   background: rgba(25, 28, 31, 0.8);
+  
+
 }
 #header.header-transparent {
   background: transparent;
@@ -762,7 +764,6 @@ section {
 .portfolio #portfolio-flters li {
   cursor: pointer;
   display: inline-block;
-  margin: 0 10px 10px 10px;
   font-size: 15px;
   font-weight: 600;
   line-height: 1;
@@ -1007,9 +1008,6 @@ section {
   background: #ffc85a;
 }
 
-.contact_box{
-  width: 50%;
-}
 
 .pro{
   flex-wrap: nowrap;
